--- a/package.json
+++ b/package.json
@@ -1,25 +1,42 @@
 {
-  "name": "my-pro",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "core-js": "^3.6.5",
-    "vue": "^2.6.11"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "vue-template-compiler": "^2.6.11"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+    "name": "my-pro",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "serve": "vue-cli-service serve",
+        "build": "vue-cli-service build",
+        "test-avatar": "vue serve ./src/components/Avatar/test.vue",
+        "test-empty": "vue serve ./src/components/Empty/test.vue",
+        "test-icon": "vue serve ./src/components/Icon/test.vue",
+        "test-img-loader": "vue serve ./src/components/ImgLoader/test.vue",
+        "test-page-manger": "vue serve ./src/components/PangeManger/test.vue",
+        "test-context": "vue serve ./src/components/Context/test.vue",
+        "test-menu": "vue serve ./src/components/Menu/test.vue",
+        "test-nav-aside": "vue serve ./src/components/navAside/test.vue",
+        "test-layout": "vue serve ./src/components/Layout/test.vue",
+        "test-loading": "vue serve ./src/components/Loading/test.vue",
+        "test-catalogue": "vue serve ./src/views/Blog/components/catalogue/test.vue"
+    },
+    "dependencies": {
+        "axios": "^0.24.0",
+        "core-js": "^3.6.5",
+        "highlight.js": "^11.3.1",
+        "mockjs": "^1.1.0",
+        "querystring": "^0.2.1",
+        "router": "^1.3.6",
+        "vue": "^2.6.11",
+        "vue-router": "^3.5.3"
+    },
+    "devDependencies": {
+        "@vue/cli-plugin-babel": "~4.5.0",
+        "@vue/cli-service": "~4.5.0",
+        "less": "^3.0.4",
+        "less-loader": "^5.0.0",
+        "vue-template-compiler": "^2.6.11"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not dead"
+    ]
 }
